force-app/main/default/objects/bpats__Message_Stats__c/bpats__Message_Stats__c.object-meta.xml
<CustomObject>
    <label>Message Stats</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Message Stats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>