force-app/main/default/objects/bpats__Message_Stats__c/fields/bpats__Blocks__c.field-meta.xml
<CustomField>
    <fullName>bpats__Blocks__c</fullName>
    <label>Blocks</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>