force-app/main/default/objects/bpats__Message_Stats__c/fields/bpats__Bounces__c.field-meta.xml
<CustomField>
    <fullName>bpats__Bounces__c</fullName>
    <label>Bounces</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>