force-app/main/default/objects/bpats__Message_Stats__c/fields/bpats__Date__c.field-meta.xml
<CustomField>
    <fullName>bpats__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>