force-app/main/default/objects/bpats__Message_Stats__c/fields/bpats__External_Key__c.field-meta.xml
<CustomField>
    <fullName>bpats__External_Key__c</fullName>
    <externalId>true</externalId>
    <label>External Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>