force-app/main/default/objects/bpats__Message_Stats__c/fields/bpats__Invalid_Emails__c.field-meta.xml
<CustomField>
    <fullName>bpats__Invalid_Emails__c</fullName>
    <label>Invalid Emails</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>