force-app/main/default/objects/bpats__Message_Stats__c/fields/bpats__Parent__c.field-meta.xml
<CustomField>
    <fullName>bpats__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>bpats__Message_Stats__c</referenceTo>
    <relationshipLabel>Message Stats</relationshipLabel>
    <relationshipName>Message_Stats</relationshipName>
    <type>Lookup</type>
</CustomField>