force-app/main/default/objects/bpats__Message_Stats__c/fields/bpats__Stats_Type__c.field-meta.xml
<CustomField>
    <fullName>bpats__Stats_Type__c</fullName>
    <label>Stats Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Type</fullName>
            </value>
            <value>
                <fullName>Browser Based</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>Device Type</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>