force-app/main/default/objects/bpats__Message_Stats__c/fields/bpats__Unique_Clicks__c.field-meta.xml
<CustomField>
    <fullName>bpats__Unique_Clicks__c</fullName>
    <label>Unique Clicks</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>